@@ -1,4 +1,4 @@
 Scripts that make up the rdup utils.
 
-Used for retrieving and examen backed up files and
-creating backups.
+see rdup's manpage for more information are the manpage of the
+specific script.
