@@ -1,0 +1,8 @@
+#!/bin/bash
+
+# Restore a entire backed up directory
+# when no options are given restore to yesterday's
+# state (i.e. copy all files without the +extenstion)
+# -n DAYSAGO (restore to DAYSAGO's state)
+
+
